# multi_agents_reasearch_assistant_with_subrag

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.zh-CN.md  README.md  agent.md  mcp_servers.json
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_events.py  routes_interactions.py  routes_jobs.py  routes_tools.py  routes_uploads.py
backend/app/core/: cache.py  config.py  storage.py
backend/app/mcp/: client.py  manager.py
backend/app/research/: graph.py  ingest.py  interactions.py  llm.py  local_knowledge.py  models.py  query_clarity.py  rag_sub_agent.py  runner.py  source_quality.py  tool_aware_agent.py  vector_knowledge.py  web_search.py
backend/app/tools/: registry.py
backend/mcp_servers/: demo_server.py
backend/multi_agent_research_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_source_quality.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.vue  api.ts  env.d.ts  main.ts  router.ts
frontend/src/lib/: markdown.ts
frontend/src/pages/: JobDetail.vue  NewJob.vue
scripts/: dev.ps1
